# sky-detector

./: README.md  pyproject.toml  test.py
sky_detector/: detector.py
