[tool.poetry]
name = "sky-detector"
version = "0.1.0"
description = ""
authors = ["Paul Tang <cftang0827@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.7"
matplotlib = "^3.2.2"
opencv-python = "^4.2.0"
scipy = "^1.5.0"
numpy = "^1.19.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
